# InterXAI-re

./: .gitignore  README.md  docker-compose.yml  judge0.conf  models.py
.github/workflows/: frontend-ci.yml
backend/: .env.example  Dockerfile.taskiq  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0bbbc7cccce5_made_organization_table_point_to_user.py  1589d7c3311d_initial_models.py  45b93ed02ddf_made_all_fields_in_userprofile_nullable.py  a6e8a9fd1022_add_table_to_store_dsa_questions.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: final_evaluator.py  follow_up_decider.py  lite_llm.py  prompts.py  resume_evaluator.py  schema.py
backend/app/background/celery/: celery.py
backend/app/background/taskiq/: worker.py
backend/app/background/taskiq/tasks/: resume_processing.py
backend/app/exceptions/: ai.py  auth.py  common.py  sql_alchemy.py  storage.py
backend/app/interfaces/: authenticator.py  background_worker.py  base_agent.py  encrypter.py  hasher.py  llm_provider.py  storage_proivder.py
backend/app/models/: application.py  base.py  dsa_question.py  interaction.py  interview.py  organization.py  user.py
backend/app/routers/: application.py  organization.py  user.py
backend/app/schemas/: __init__.py  application.py  organization.py  user.py
backend/app/utils/: authorization.py  bcrypt_hasher.py  default_providers.py  jwt_auth.py  jwt_encrypter.py  lite_llm.py  pdf.py  supabase_provider.py
tools/: backend_lint
